@@ -223,7 +223,7 @@ sub reset_my_plugin {
 sub shutdown {
 	my $self = shift;
 
-	Padre::DB->begin;
+	my $transaction = Padre::Current->main->lock('DB');
 	foreach my $module ( $self->plugin_order ) {
 		my $plugin = $self->_plugin($module);
 		if ( $plugin->enabled ) {
@@ -238,7 +238,6 @@ sub shutdown {
 			);
 		}
 	}
-	Padre::DB->commit;
 
 	return 1;
 }
