@@ -34,6 +34,8 @@ Changes for Perl Application Development and Refactoring Environment
     - Ctrl-Tab behaviour is now configurable (SEWI)
     - Rename Padre::Debug to Padre::Logger (SZABGAB)
     - Reuse the comment field of the menu actions and show them in the toolbar (SZABGAB)
+    - Integrated Padre::DB into the Padre::Locker API, so that we can do
+      (very basic) nested transactions (ADAMK)
 
 0.52 2009.12.14
     - Add a plugin hook on change of current editor tab (SEWI)
